--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -22,18 +22,18 @@
                 <div class="col-md-4 col-sm-12">
                     <h4 class="heading">2018 Lodge Officers</h4>
                     <p>
-                        Worshipful Master - Alton Sullivan<br />
-                        Senior Warden - David Hooter<br />
-                        Junior Warden - Jason Allen<br />
-                        Treasurer - Joe Shumate, PM<br />
-                        Secretary - William Ronnie Coon, PM<br />
-                        Chaplain - Mickey Brandon, PM<br />
-                        Senior Deacon - James Lucas<br />
-                        Junior Deacon - Dean Quave<br />
-                        Master of Ceremonies - Scott Knight<br />
-                        Senior Steward - Rankin Miley<br />
-                        Junior Steward - Dustin Jones<br />
-                        Tyler - Brian Watson, PM
+                        <strong>Worshipful Master</strong> - Alton Sullivan<br />
+                        <strong>Senior Warden</strong> - David Hooter<br />
+                        <strong>Junior Warden</strong> - Jason Allen<br />
+                        <strong>Treasurer</strong> - Joe Shumate, PM<br />
+                        <strong>Secretary</strong> - William Ronnie Coon, PM<br />
+                        <strong>Chaplain</strong> - Mickey Brandon, PM<br />
+                        <strong>Senior Deacon</strong> - James Lucas<br />
+                        <strong>Junior Deacon</strong> - Dean Quave<br />
+                        <strong>Master of Ceremonies</strong> - Scott Knight<br />
+                        <strong>Senior Steward</strong> - Rankin Miley<br />
+                        <strong>Junior Steward</strong> - Dustin Jones<br />
+                        <strong>Tyler</strong> - Brian Watson, PM
                     </p>
                 </div>
             </div>
