Added Photos page and edited Contact page

--- a/layouts/nav.html
+++ b/layouts/nav.html
@@ -11,6 +11,7 @@
                 <ul class="nav navbar-nav">
                     <li id="index"><a href="index.html">Home</a></li>
                     <li id="about"><a href="about.html">About</a></li>
+                    <li id="photos"><a href="photos.html">Photos</a></li>
                     <li id="trestleboard"><a href="trestleboard.html">Trestleboard</a></li>
                     <li id="contact"><a href="contact.html">Contact</a></li>
                 </ul>
