--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -11,6 +11,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
+                        <li><a href="photos.html">Photos</a></li>
                         <li><a href="trestleboard.html">Trestleboard</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
