--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -19,6 +19,13 @@
                 <div class="col-md-4 col-sm-6">
                     <h4 class="heading">Contact Us</h4>
                     <p class="social social--big"><a href="https://www.facebook.com/Denham-Springs-Masonic-Lodge-893098987528316/" data-animate-hover="pulse" class="external facebook"><i class="fa fa-facebook"></i></a><a href="mailto:dsmasoniclodge@gmail.com" data-animate-hover="pulse" class="email"><i class="fa fa-envelope"></i></a></p>
+                    <h4 class="heading">Make a Donation</h4>
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="FPDLULXH6WC8C">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <h4 class="heading">2018 Lodge Officers</h4>
