updated 2019 officers and removed some contact info

--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -28,19 +28,19 @@
                     </form>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <h4 class="heading">2018 Lodge Officers</h4>
+                    <h4 class="heading">2019 Lodge Officers</h4>
                     <p>
-                        <strong>Worshipful Master</strong> - Alton Sullivan<br />
-                        <strong>Senior Warden</strong> - David Hooter<br />
-                        <strong>Junior Warden</strong> - Jason Allen<br />
+                        <strong>Worshipful Master</strong> - David Hooter<br />
+                        <strong>Senior Warden</strong> - Scott Knight<br />
+                        <strong>Junior Warden</strong> - Joseph Rabb<br />
                         <strong>Treasurer</strong> - Joe Shumate, PM<br />
                         <strong>Secretary</strong> - William Ronnie Coon, PM<br />
                         <strong>Chaplain</strong> - Mickey Brandon, PM<br />
-                        <strong>Senior Deacon</strong> - James Lucas<br />
+                        <strong>Senior Deacon</strong> - David Groce<br />
                         <strong>Junior Deacon</strong> - Dean Quave<br />
-                        <strong>Master of Ceremonies</strong> - Scott Knight<br />
+                        <strong>Master of Ceremonies</strong> - Jim McMorris, PM<br />
                         <strong>Senior Steward</strong> - Rankin Miley<br />
-                        <strong>Junior Steward</strong> - Dustin Jones<br />
+                        <strong>Junior Steward</strong> - John Dillon<br />
                         <strong>Tyler</strong> - Brian Watson, PM
                     </p>
                 </div>
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy;2018 D.S. Masonic Lodge #297</p>
+                    <p>&copy;2019 D.S. Masonic Lodge #297</p>
                 </div>
                 <div class="col-md-6">
                     <p class="credit">Designed by <a href="mailto:scottknight@protonmail.com">Scott Knight</a> with <a href="https://bootstrapious.com/e-commerce-templates" class="external">Bootstrapious</a></p>
